added swagger, edited update prop
